--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       line-height: 1.6;
       overflow-x: hidden;
     }
-    header {
+    header {res
       text-align: center;
       padding-bottom: 2rem;
       animation: fadeIn 1s ease-in-out;
@@ -157,7 +157,7 @@
     <h1>Ashish Gupta</h1>
     <p>Final Year B.Tech Civil Engg | E-Cell Lead | Data + Dev + Debate</p>
     <p><a href="https://www.linkedin.com/in/ashish-gupta-19a186256" target="_blank">LinkedIn</a></p>
-    <a href="assets/resume.pdf" class="btn" download>Download Resume</a>
+    <a href="resume.pdf" class="btn" download>Download Resume</a>
   </header>
 
   <section class="section">
